# PIDSMaker

./: .env.local  .env_default  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose-pidsmaker.yml  compose-postgres.yml  compose.yml  download_datasets.sh  entrypoint.sh  environment.yaml  index.html  postgres-start.sh  postgres-status.sh  pyproject.toml  run.sh  run_hyperparameters_clearscope_e5.sh  run_hyperparameters_fivedirections_e5.sh  run_orthrus_ablation.sh  run_orthrus_hyperparameters.sh  run_orthrus_node_detection.sh  run_serial.sh  sitemap.xml  top20.txt
.devcontainer/: devcontainer.json
Ground_Truth/: readme.md
config/: amalgame.yml  amalgame_linear.yml  amalgame_linear_few_shot.yml  amalgame_orthrus.yml  amalgamenodlink.yml  benchmark.yml  best_model.yml  default.yml  few_shot.yml  flash.yml  kairos.yml  kairos_plus_plus.yml  magic.yml  mimicry.yml  nodlink.yml  orthrus.yml  orthrus_fixed.yml  orthrus_fixed_minibatch.yml  orthrus_non_snooped.yml  playground.yml  provd.yml  rcaid.yml  test_sigl.yml  tests.yml  threatrace.yml  velox.yml
contribute/: index.html
contributing/: index.html
create-db-from-scratch/: index.html
dataset_preprocessing/: README.md  create-db-from-scratch.md  create_database.sh  load_dumps.sh  parser_config.py  parser_utils.py  requirements.txt
datasets/: index.html
docs/: README.md  build.sh  mkdocs.yml
download-files/: index.html
image/: Dockerfile
introduction/: index.html
kairos_plusplus/: Makefile  anomalous_queue_construction_edgebase.py  benchmark.py  config.py  darpa_preprocess.py  embedding.py  graph_constructor.py  model.py  node_embedding.py  provnet_utils.py  (+3 more)
(+727 files in other folders)
