[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pidsmaker"
version = "4.0.0"
description = "Intrusion detection framework based on deep learning"
authors = [{name="mlx-graphs contributors"}]
readme = "README.md"
requires-python = ">= 3.9"

[tool.setuptools]
packages = ["pidsmaker"]

[project.optional-dependencies]
docs = [
  "sphinx==7.2.6",
  "sphinx-book-theme==1.1.0",
  "sphinx-autodoc-typehints==1.25.2",
  "nbsphinx==0.9.3",
  "sphinx-gallery==0.15.0",
]

[tool.ruff]
line-length = 100
indent-width = 4
lint.select = ["W", "I001"]
exclude = [
    ".svg",
    ".ipynb",
    ".json",
    ".csv"
]
lint.isort.known-first-party = ["pidsmaker"]
lint.isort.known-third-party = ["wandb", "torch", "numpy"]
lint.isort.section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
